@@ -128,6 +128,9 @@ static void printusage(FILE * f)
 	"[-i] "
 #endif
         "[-D] [-s <config_file>]\n"
+#ifdef HAVE_OPENSSL
+	"              [-S] [-C] [-K <ssl_keyfile>] [-X <ssl_certfile>]\n"
+#endif
         "              [-f <config_file>]\n\n"
 	"  -b <address>    the address to bind to (either numeric or literal).\n"
 	"                  Default: binds to all local IPv4 and IPv6 addresses\n\n"
@@ -157,8 +160,8 @@ static void printusage(FILE * f)
 #ifdef HAVE_OPENSSL
 	"  -S              encrypt all communication with SSL (implements rpcaps://)\n"
 	"  -C              enable compression\n"
-	"  -K <pem_file>   uses the SSL private key in this file (default: key.pem)\n"
-	"  -X <pem_file>   uses the certificate from this file (default: cert.pem)\n"
+	"  -K <ssl_keyfile> use the SSL private key in this file (default: key.pem)\n"
+	"  -X <ssl_certfile> use the certificate from this file (default: cert.pem)\n"
 #endif
 	"  -s <config_file> save the current configuration to file\n\n"
 	"  -f <config_file> load the current configuration from file; all switches\n"
